--- a/CodeComplexityMeasuringTool/nbproject/project.properties
+++ b/CodeComplexityMeasuringTool/nbproject/project.properties
@@ -35,6 +35,7 @@ endorsed.classpath=
 excludes=
 file.reference.checker-qual-2.10.0.jar=..\\..\\..\\..\\Desktop\\lib\\checker-qual-2.10.0.jar
 file.reference.com.lowagie.text-2.1.7.jar=C:\\Users\\Imali\\Downloads\\com.lowagie.text-2.1.7.jar\\com.lowagie.text-2.1.7.jar
+file.reference.Documents-jar=C:\\Users\\Imali\\Documents\\jar
 file.reference.error_prone_annotations-2.3.4.jar=..\\..\\..\\..\\Desktop\\lib\\error_prone_annotations-2.3.4.jar
 file.reference.failureaccess-1.0.1.jar=..\\..\\..\\..\\Desktop\\lib\\failureaccess-1.0.1.jar
 file.reference.guava-28.2-jre.jar=..\\..\\..\\..\\Desktop\\lib\\guava-28.2-jre.jar
@@ -59,7 +60,8 @@ javac.classpath=\
     ${file.reference.jsr305-3.0.2.jar}:\
     ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
     ${file.reference.itext-1.4.jar}:\
-    ${file.reference.com.lowagie.text-2.1.7.jar}
+    ${file.reference.com.lowagie.text-2.1.7.jar}:\
+    ${file.reference.Documents-jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
